--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <ul>
 <li><a href="index.html" id="home">Home</a></li>
 <li><a href="meet.html" id="meet_the_doctor">Meet the Team</a></li>
-<li><a href="why.html" id="why_a_pediatric_link">Why a Pediatric Dentist?</a></li>
+<li><a href="reviewsindex2.html" id="why_a_pediatric_link">Why a Pediatric Dentist?</a></li>
 <li><a href="services.html" id="services_link">Services</a></li>
 <li><a href="testimonials.html" id="testimonials_link">Testimonials</a></li>
 <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
