--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 <meta name="keywords" content="kids dentist lehigh valley Pennsylvania" />
 <meta name="description" content="The pediatric dental office of Jeannine Wyke DMD strives to make every dental visit fun while creating healthy smiles & great dental habits. We're the foundation of your child's dental health. We think they deserve the best. Call today to schedule an appointment. (610) 867-1511" />
-<title>Pediatric Dentists in Bethlehem, PA</title>
+<title>TTP STUDIOS</title>
 
 <!--Use this meta tag so iPhones scale the page appropriately --------------------->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -31,13 +31,15 @@
         
 <nav id = "top">
 <ul>
-<li><a href="index.html" id="home">Home</a></li>
-<li><a href="meet.html" id="meet_the_doctor">Meet the Team</a></li>
-<li><a href="reviewsindex2.html" id="why_a_pediatric_link">Why a Pediatric Dentist?</a></li>
-<li><a href="services.html" id="services_link">Services</a></li>
-<li><a href="testimonials.html" id="testimonials_link">Testimonials</a></li>
+<li><a href="index.html" id="home">-Home-</a></li>
+<li><a href="meet.html" id="meet_the_doctor">-About-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Newsletter-</a></li>   
+<li><a href="why.html" id="why_a_pediatric_link">-Writing-</a></li>
+<li><a href="software.html" id="services_link">-Software-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
 <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
-<li><a href="contact_us.html" id="contact_us_link">Contact&nbsp;Us</a></li>
+<li><a href="contact.html" id="testimonials_link">-Forum-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
 </ul>
 </nav>
 
@@ -46,9 +48,9 @@
 <section id ="container">
 
     <article id="homepage">
-        <h1>Making every dental&nbsp;visit fun...</h1>
-        <h2>while creating healthy smiles &amp; great dental&nbsp;habits.</h2>
-    <p>As pediatric dentists, we specialize in caring for young people. Our office is fun and cheerful. Our staff outgoing and friendly. We want to make your children’s first visit enjoyable. A poor first experience can set them up for a lifetime of dental fear; however, we want them to enjoy their healthy smile forever. We’ll make their first visit—and every visit thereafter—enjoyable. We’ll help them develop proper oral hygiene practices early and teach them how to focus on prevention so many problems never even get started. And we’ll make it fun. After all, when you start strong, you can finish strong.
+        <h1>Charting constellation creation&nbsp;and formations...</h1>
+        <h2>while creating good projects &amp; and great ideas.</h2>
+    <p>As the TTP crew we are composed of dualic dynamic individuals. We seek to better our planet, and therefore the UNIVERSE by building artistic projects and not being afraid to indulge in scientific expiermentation and exploration.
     </p>
     <h3>We’re the foundation to your child’s dental health.<br>We think they deserve the best.<br>Call today to schedule your appointments. 610-867-1511</h3>
 </article>
@@ -75,7 +77,7 @@
     </footer>
 
 <footer id = "copyright">
-    <p>Copyright &copy;2016  Dr. Jeannine Wyke DMD</p>
+    <p>Copyright &copy;2020  TTP STUDIOS</p>
     </footer>
    
 </body>
