--- a/hours.html
+++ b/hours.html
@@ -23,10 +23,10 @@
 <body>
     
     <header id ="addresstop">
-        <p>Jeannine E Wyke, DMD, PC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Bethlehem,&nbsp;PA 18018&nbsp;&nbsp; | &nbsp;&nbsp;610&#8209;867&#8209;1511</p>
+        <p>TTP STUDIOS, LLC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Hackettstown,&nbsp;NJ 07840&nbsp;&nbsp; | &nbsp;&nbsp;CALL&#8209;TODAY&#8209;!!!!!</p>
     </header>
     <header id ="banner">
-        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="Dr. Jeannine Wyke Dentist Header Image">
+        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="TTP STUDIOS LOGO">
     </header>
         
 <nav id = "top">
