--- a/hours.html
+++ b/hours.html
@@ -23,10 +23,10 @@
 <body>
     
     <header id ="addresstop">
-        <p>TTP STUDIOS, LLC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Hackettstown,&nbsp;NJ 07840&nbsp;&nbsp; | &nbsp;&nbsp;CALL&#8209;TODAY&#8209;!!!!!</p>
+        <p>Jeannine E Wyke, DMD, PC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Bethlehem,&nbsp;PA 18018&nbsp;&nbsp; | &nbsp;&nbsp;610&#8209;867&#8209;1511</p>
     </header>
     <header id ="banner">
-        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="TTP STUDIOS LOGO">
+        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="Dr. Jeannine Wyke Dentist Header Image">
     </header>
         
 <nav id = "top">
@@ -34,7 +34,7 @@
 <li><a href="index.html" id="home">-Home-</a></li>
 <li><a href="meet.html" id="meet_the_doctor">-About-</a></li>
 <li><a href="contact.html" id="testimonials_link">-Newsletter-</a></li>   
-<li><a href="why.html" id="why_a_pediatric_link">-Writing-</a></li>
+<li><a href="WritingMain.html" id="why_a_pediatric_link">-Writing-</a></li>
 <li><a href="software.html" id="services_link">-Software-</a></li>
 <li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
 <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
