--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 <meta name="keywords" content="kids dentist lehigh valley Pennsylvania" />
 <meta name="description" content="The pediatric dental office of Jeannine Wyke DMD strives to make every dental visit fun while creating healthy smiles & great dental habits. We're the foundation of your child's dental health. We think they deserve the best. Call today to schedule an appointment. (610) 867-1511" />
-<title>Pediatric Dentists in Bethlehem, PA</title>
+<title>TTP STUDIOS</title>
 
 <!--Use this meta tag so iPhones scale the page appropriately --------------------->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,10 +23,10 @@
 <body>
     
     <header id ="addresstop">
-        <p>TTP STUDIOS, LLC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Hackettstown,&nbsp;NJ 07840&nbsp;&nbsp; | &nbsp;&nbsp;CALL&#8209;TODAY&#8209;!!!!!</p>
+        <p>Jeannine E Wyke, DMD, PC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Bethlehem,&nbsp;PA 18018&nbsp;&nbsp; | &nbsp;&nbsp;610&#8209;867&#8209;1511</p>
     </header>
     <header id ="banner">
-        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="TTP STUDIOS LOGO">
+        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="Dr. Jeannine Wyke Dentist Header Image">
     </header>
         
 <nav id = "top">
@@ -34,7 +34,7 @@
 <li><a href="index.html" id="home">-Home-</a></li>
 <li><a href="meet.html" id="meet_the_doctor">-About-</a></li>
 <li><a href="contact.html" id="testimonials_link">-Newsletter-</a></li>   
-<li><a href="why.html" id="why_a_pediatric_link">-Writing-</a></li>
+<li><a href="WritingMain.html" id="why_a_pediatric_link">-Writing-</a></li>
 <li><a href="software.html" id="services_link">-Software-</a></li>
 <li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
 <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
@@ -95,7 +95,7 @@
     </footer>
 
 <footer id = "copyright">
-    <p>Copyright &copy;2016  Dr. Jeannine Wyke DMD</p>
+    <p>Copyright &copy;2020  TTP STUDIOS</p>
     </footer>
    
 </body>
