--- a/WritingMain.html
+++ b/WritingMain.html
@@ -23,10 +23,10 @@
 <body>
     
     <header id ="addresstop">
-        <p>Jeannine E Wyke, DMD, PC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Bethlehem,&nbsp;PA 18018&nbsp;&nbsp; | &nbsp;&nbsp;610&#8209;867&#8209;1511</p>
+        <p>TTP STUDIOS, LLC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Hackettstown,&nbsp;NJ 07840&nbsp;&nbsp; | &nbsp;&nbsp;CALL&#8209;TODAY&#8209;!!!!!</p>
     </header>
     <header id ="banner">
-        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="Dr. Jeannine Wyke Dentist Header Image">
+        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="TTP STUDIOS LOGO">
     </header>
         
 <nav id = "top">
@@ -49,14 +49,12 @@
 
     <article id="test">
         <h1 id ="atop">WRITERS INDEX</h1>
-        <h1 id ="atop">ARTICLES INDEX</h1>
 <blockquote><span class ="quote">&ldquo;</span>
     Where do I begin! My children have been patients of Dr. Wyke for over 7 years now, and we travel over 45 minutes to her practice. Dr Wyke and her team are AMAZING... compassionate, caring and knowledgeable! They make every visit enjoyable... even the bad ones (and we have had our share of those)! I have recommended Dr. Wyke to several friends, and they have all commented on how great the team was! Thank you for making every visit enjoyable and one that my children look forward to. 
 <br><i>-Lori Bowers</i></blockquote>
 
 
 
-    <h1 id ="atop">REVIEWS INDEX</h1>
 <blockquote><span class ="quote">&ldquo;</span>
     Dr. Wyke and her staff are very professional, pleasant and accommodating. My daughter has been a client since 2007 and looks forward to going to her regularly scheduled visits. The staff always sets her mind at ease and she always comes out smiling. I would recommend this office to anyone that is looking for a great dentist office that always makes you feel like family. 
 <br><i>-The Sears-Banks Family</i></blockquote>
