--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 <meta name="keywords" content="kids dentist lehigh valley Pennsylvania" />
 <meta name="description" content="The pediatric dental office of Jeannine Wyke DMD strives to make every dental visit fun while creating healthy smiles & great dental habits. We're the foundation of your child's dental health. We think they deserve the best. Call today to schedule an appointment. (610) 867-1511" />
-<title>TTP STUDIOS</title>
+<title>Pediatric Dentists in Bethlehem, PA</title>
 
 <!--Use this meta tag so iPhones scale the page appropriately --------------------->
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,10 +23,10 @@
 <body>
     
     <header id ="addresstop">
-        <p>Jeannine E Wyke, DMD, PC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Bethlehem,&nbsp;PA 18018&nbsp;&nbsp; | &nbsp;&nbsp;610&#8209;867&#8209;1511</p>
+        <p>TTP STUDIOS, LLC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Hackettstown,&nbsp;NJ 07840&nbsp;&nbsp; | &nbsp;&nbsp;CALL&#8209;TODAY&#8209;!!!!!</p>
     </header>
     <header id ="banner">
-        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="Dr. Jeannine Wyke Dentist Header Image">
+        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="TTP STUDIOS LOGO">
     </header>
         
 <nav id = "top">
@@ -95,7 +95,7 @@
     </footer>
 
 <footer id = "copyright">
-    <p>Copyright &copy;2020  TTP STUDIOS</p>
+    <p>Copyright &copy;2020 TTP STUDIOS</p>
     </footer>
    
 </body>
