--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 <li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
 <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
 <li><a href="contact.html" id="testimonials_link">-Forum-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Interaction-</a></li>
 <li><a href="contact.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
 </ul>
 </nav>
@@ -52,7 +53,7 @@
         <h2>while creating good projects &amp; and great ideas.</h2>
     <p>As the TTP crew we are composed of dualic dynamic individuals. We seek to better our planet, and therefore the UNIVERSE by building artistic projects and not being afraid to indulge in scientific expiermentation and exploration.
     </p>
-    <h3>We’re the foundation to your child’s dental health.<br>We think they deserve the best.<br>Call today to schedule your appointments. 610-867-1511</h3>
+    <h3>We are the foundation to your greatest dreams.<br>We believe in creating great projects by great people.<br>Call today!!! appointments. 610-867-1511</h3>
 </article>
 
 <nav id = "side">
@@ -70,9 +71,9 @@
  </section>
     
      <footer id ="addressbottom">
-    <p>Jeannine E Wyke, DMD, PC<br>
+    <p>TTP STUDIOS, LLC<br>
         701 W. Union Blvd. Suite 5<br>
-        Bethlehem, PA 18018<br>
+        Gotham, NJ 18018<br>
         610&#8209;867&#8209;1511</p>
     </footer>
 
