--- a/WritingMain.html
+++ b/WritingMain.html
@@ -28,7 +28,7 @@
     <header id ="banner">
         <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="TTP STUDIOS LOGO">
     </header>
-        
+ 
 <nav id = "top">
 <ul>
 <li><a href="index.html" id="home">-Home-</a></li>
@@ -39,9 +39,11 @@
 <li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
 <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
 <li><a href="contact.html" id="testimonials_link">-Forum-</a></li>
-<li><a href="contact.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Interaction-</a></li>
+<li><a href="register.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
 </ul>
 </nav>
+
 
 
 
