--- a/testimonials.html
+++ b/testimonials.html
@@ -23,7 +23,7 @@
 <body>
     
     <header id ="addresstop">
-        <p>Jeannine E Wyke, DMD, PC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Bethlehem,&nbsp;PA 18018&nbsp;&nbsp; | &nbsp;&nbsp;610&#8209;867&#8209;1511</p>
+        <p>TTP STUDIOS, LLC, PC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Bethlehem,&nbsp;PA 18018&nbsp;&nbsp; | &nbsp;&nbsp;610&#8209;867&#8209;1511</p>
     </header>
     <header id ="banner">
         <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="Dr. Jeannine Wyke Dentist Header Image">
@@ -31,16 +31,18 @@
         
 <nav id = "top">
 <ul>
-<li><a href="index.html" id="home">Home</a></li>
-<li><a href="meet.html" id="meet_the_doctor">Meet the Team</a></li>
-<li><a href="why.html" id="why_a_pediatric_link">Why a Pediatric Dentist?</a></li>
-<li><a href="services.html" id="services_link">Services</a></li>
-<li><a href="testimonials.html" id="testimonials_link">Testimonials</a></li>
+<li><a href="index.html" id="home">-Home-</a></li>
+<li><a href="meet.html" id="meet_the_doctor">-About-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Newsletter-</a></li>   
+<li><a href="WritingMain.html" id="why_a_pediatric_link">-Writing-</a></li>
+<li><a href="software.html" id="services_link">-Software-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
 <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
-<li><a href="contact_us.html" id="contact_us_link">Contact&nbsp;Us</a></li>
+<li><a href="contact.html" id="testimonials_link">-Forum-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Interaction-</a></li>
+<li><a href="register.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
 </ul>
 </nav>
-
 
 
 <section id ="container">
