--- a/articlesmain.html
+++ b/articlesmain.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
 <meta name="keywords" content="studio, software, music, production" />
-<meta name="description" content="A studio unlike any other that has ever been.
+<meta name="description" content="A studio unlike any other that has ever been." />
 <title>The TTP Foundation</title>
 
 <!--Use this meta tag so iPhones scale the page appropriately --------------------->
