--- a/hours.html
+++ b/hours.html
@@ -2,11 +2,11 @@
 <html lang = "en">
 
 <head>
-    <meta charset="UTF-8">
-<meta name="keywords" content="kids dentist lehigh valley Pennsylvania" />
-<meta name="description" content="The pediatric dental office of Jeannine Wyke DMD strives to make every dental visit fun while creating healthy smiles & great dental habits. We're the foundation of your child's dental health. We think they deserve the best. Call today to schedule an appointment. (610) 867-1511" />
-<title>TTP STUDIOS</title>
-
+     <meta charset="UTF-8">
+<meta name="keywords" content="studio, software, music, production" />
+<meta name="description" content="A studio unlike any other that has ever been." />
+<title>The TTP Foundation</title>
+    
 <!--Use this meta tag so iPhones scale the page appropriately --------------------->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
