--- a/reviewsindex2.html
+++ b/reviewsindex2.html
@@ -95,7 +95,7 @@
 
 <h2>THE REVIEWS INDEX/ARCHIVE</h2>
   <p> Reviews are my thoughts, feelings, and impressions on products within the media. As always, I encourage my reader to use the product themselves and form thier own opinions. We may not end up agreeing but I rather you do that then to just agree with me just because its easier. I also WILL NOT REVIEW ANYTHING I HAVE NOT SEEN OR USED. This is a long standing policy, to ensure fairness and unbiasedness. 
-  Or you may be looking for my PROCESS PAGE, which details how I construct each review.</p>
+  Or you may be looking for my <a href="https://thetrueparty.github.io/PROTOTYPE/processpage.html">PROCESS PAGE</a>, which details how I construct each review.</p>
 
     
 
