--- a/articlesmain.html
+++ b/articlesmain.html
@@ -67,7 +67,7 @@ A long time ago I wrote this for my friend at Ex Astris. He is a brilliant man b
 <br><i>-Originally published Spring 2016<</i></blockquote>
 <h1 id ="atop"><a href=https://thetrueparty.github.io/PROTOTYPE/article3.html> The Philosophy of Postive Energy</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
-    Important advice for all human beings, everywhere. <br><i>-Megan Ochotorena</i></blockquote>
+    Important advice for all human beings, everywhere.
 <br><i>-Originally published Spring 2016<</i></blockquote>
    
 <h1 id ="atop"><a href=https://thetrueparty.github.io/PROTOTYPE/article4.html> The Legend of The 9</h1> </a>
