--- a/software.html
+++ b/software.html
@@ -51,13 +51,13 @@
     <article id="test">
         <h1 id ="atop">SOFTWARE INDEX</h1>
 
-<a href="articlesmain.html" id="testimonials_link"> <h1 id ="atop">SAMPLE PROJECTS INDEX</h1> </a>
+<a href="PROTOTYPE/SWindex1.html" id="testimonials_link"> <h1 id ="atop">SAMPLE PROJECTS INDEX</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
     A random grab bag of various things I have coded/developed or assisted in those areas with. All will work in your browser.
 <br><i>-Last Updated: May 2020</i></blockquote>
 
 
-<a href="reviewsindex2.html" id="testimonials_link"> <h1 id ="atop">MARKETPLACE INDEX</h1> </a>
+<a href="PROTOTYPE/SOFWARE MARKETPLACE.html" id="testimonials_link"> <h1 id ="atop">MARKETPLACE INDEX</h1> </a>
     <blockquote><span class ="quote">&ldquo;</span>
     For comercial software developed by TTP or friends of the TTP crew. 
 <br><i>-Last Updated: May 2020</i></blockquote>
