--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
 <nav id = "top">
 <ul>
 <li><a href="index.html" id="home">-Home-</a></li>
-<li><a href="meet.html" id="meet_the_doctor">-About-</a></li>
+<li><a href="about.html" id="meet_the_doctor">-About-</a></li>
 <li><a href="contact.html" id="testimonials_link">-Newsletter-</a></li>   
 <li><a href="WritingMain.html" id="why_a_pediatric_link">-Writing-</a></li>
 <li><a href="software.html" id="services_link">-Software-</a></li>
@@ -43,7 +43,6 @@
 <li><a href="register.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
 </ul>
 </nav>
-
 
 
 <section id ="container">
