--- a/hours.html
+++ b/hours.html
@@ -32,7 +32,7 @@
 <nav id = "top">
 <ul>
 <li><a href="index.html" id="home">-Home-</a></li>
-<li><a href="meet.html" id="meet_the_doctor">-About-</a></li>
+<li><a href="about.html" id="meet_the_doctor">-About-</a></li>
 <li><a href="contact.html" id="testimonials_link">-Newsletter-</a></li>   
 <li><a href="WritingMain.html" id="why_a_pediatric_link">-Writing-</a></li>
 <li><a href="software.html" id="services_link">-Software-</a></li>
@@ -43,7 +43,6 @@
 <li><a href="register.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
 </ul>
 </nav>
-
 
 <!--Sample Hours Chart-->
 <section id ="container">
@@ -81,9 +80,9 @@
  </section>
     
      <footer id ="addressbottom">
-    <p>Jeannine E Wyke, DMD, PC<br>
+    <p>TTP STUDIOS, LLC<br>
         701 W. Union Blvd. Suite 5<br>
-        Bethlehem, PA 18018<br>
+        Hackettstown, NJ 18018<br>
         610&#8209;867&#8209;1511</p>
     </footer>
 
