--- a/article1.html
+++ b/article1.html
@@ -48,7 +48,7 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">PROCESS PAGE</h1>
+        <h1 id ="atop">INCORRECT STRATEGY</h1>
 <blockquote><span class ="quote">&ldquo;</span>
 
 Since I love video games, I thought I would put together a list of some of the more interesting glitches/gameplay features in many video games. This is only to include cheats as it pertains to certain functions/irregularities, but not intended as a cheat code guide or exploit guide in any event.Rather this is just an exploration of some quirky moments within gaming.
