--- a/article2.html
+++ b/article2.html
@@ -47,7 +47,7 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">PROCESS PAGE</h1>
+        <h1 id ="atop">THE HISTORY OF STAR TREK GAMING</h1>
 <blockquote><span class ="quote">&ldquo;</span>
 
 "There is no good Star Trek video game" -Various
