--- a/article3.html
+++ b/article3.html
@@ -48,7 +48,7 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">Article #3, The Philosphy of Positive Energy</h1>
+        <h1 id ="atop">The Philosphy of Positive Energy</h1>
 <blockquote><span class ="quote">&ldquo;</span>
 
 One lives ones life as it happens. We all make choices that affect the course of our lives. We choose whether we give love, and feel loved. It is forever ours and our alone responsibility for happiness. The moment we put it onto anyone else, we have already lost the game. We decide whether we are happy or not, and how to be.
