--- a/articlesmain.html
+++ b/articlesmain.html
@@ -51,22 +51,22 @@
     <article id="test">
         <h1 id ="atop">SOFTWARE INDEX</h1>
 
-<a href="PROTOTYPE/article1.html" id="testimonials_link"> <h1 id ="atop">Incorrect Strategy</h1> </a>
+<a href="article1.html" id="testimonials_link"> <h1 id ="atop">Incorrect Strategy</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
     An exhaustive article about some of the more interesting things that can happen in games. This is one of the more fun things to write and read.
 <br><i>-Last Updated: May 2020</i></blockquote>
 
-<a href="PROTOTYPE/article2.html" id="testimonials_link"> <h1 id ="atop">THE HISTORY OF STAR TREK GAMING</h1> </a>
+<a href="article2.html" id="testimonials_link"> <h1 id ="atop">THE HISTORY OF STAR TREK GAMING</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
     A long time ago I wrote this for my friend at Ex Astris. He is a brilliant man but never played video games. We realized that most of the Star Trek game reviews avaliable to people did not do it justice. Either the person writing the review was not big enough of a Star Trek fan to appreciate certain games for what they were, or they were a big Star Trek fan but not remoteley gamers. Because they were not gamers, they could not properly talk about the things on which they wrote thier report.  We wanted a perspective that could be more even handed and go down the middle. This article came to be, as I am a person who is both a big Star Trek fan, and a big Video Game fan. Please enjoy. 
 <br><i>-Last Updated: Fall 2015</i></blockquote>
 
-<a href="PROTOTYPE/article3.html" id="testimonials_link"> <h1 id ="atop">The Philosophy of Postive Energy </h1> </a>
+<a href="article3.html" id="testimonials_link"> <h1 id ="atop">The Philosophy of Postive Energy </h1> </a>
     <blockquote><span class ="quote">&ldquo;</span>
      Important advice for all human beings, everywhere. 
 <br><i>-Last Updated: May 2020</i></blockquote>
 
-<a href="PROTOTYPE/article4.html" id="testimonials_link"> <h1 id ="atop">The Legend of the 9</h1> </a>
+<a href="article4.html" id="testimonials_link"> <h1 id ="atop">The Legend of the 9</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
     A look into one of the wisest things my father ever taught me.
 <br><i>-COMMING SOON:</i></blockquote>
