--- a/articlesmain.html
+++ b/articlesmain.html
@@ -49,7 +49,7 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">SOFTWARE INDEX</h1>
+        <h1 id ="atop">ARTICLES INDEX</h1>
 
 <a href="article1.html" id="testimonials_link"> <h1 id ="atop">Incorrect Strategy</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
