--- a/WritingMain.html
+++ b/WritingMain.html
@@ -58,7 +58,7 @@
 <br><i>-Last Updated: May 2020</i></blockquote>
 
 
-<a href="reviewsindex2.html" id="testimonials_link"> <h1 id ="atop">REVIEWS INDEX</h1> </a>
+<a href="reviewsindex.html" id="testimonials_link"> <h1 id ="atop">REVIEWS INDEX</h1> </a>
     <blockquote><span class ="quote">&ldquo;</span>
     Fun fast paced reviews. We delve into TV SHOWS, MOVIES, VIDEO GAMES and more. Come take a look! 
 <br><i>-Last Updated: May 2020</i></blockquote>
