--- a/articlesmain.html
+++ b/articlesmain.html
@@ -77,14 +77,16 @@
 
 <nav id = "side">
     <ul>
-        <li><a href="patient_resources.html" id="patient_resources_link">Patient Resources</a></li>
-        <li><a href="payment_information.html" id="patient_information">Payment Information</a></li>
-        <li><a href="appointment_request.html" id="appointment_request_link">Appointment Request</a></li>
-        <li><a href="refer_our_office.html" id="refer_our_office_link">Refer Our Office</a></li>
-        <li><a href="faq.html" id="faq_link">Frequently Asked Questions</a></li>
-        <li><a href="http://www.dentalhealthonline.net/" target="_blank">Dental Health</a></li>
-        <li><a href="http://www.drjwyke.wordpress.com" target="_blank">Follow Our Blog</a></li>
-        <li><a href="http://www.facebook.com/DrJeannineWyke" target="_blank" title="Facebook">Follow us on Facebook</a></li>
+    <li><a href="index.html" id="home">-Home-</a></li>
+    <li><a href="about.html" id="meet_the_doctor">-About-</a></li>
+    <li><a href="contact.html" id="testimonials_link">-Newsletter-</a></li>   
+    <li><a href="WritingMain.html" id="why_a_pediatric_link">-Writing-</a></li>
+    <li><a href="software.html" id="services_link">-Software-</a></li>
+    <li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
+    <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
+    <li><a href="Forum.html" id="testimonials_link">-Forum-</a></li>
+    <li><a href="register.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
+     <li><a href="https://www.facebook.com/groups/899932487136175" target="_blank" title="Facebook">Follow us on Facebook</a></li>
     </ul>
 </nav>
  </section>
