--- a/contact.html
+++ b/contact.html
@@ -49,14 +49,14 @@
     <article id="test">
         <h1 id ="atop">WRITERS INDEX</h1>
 
-<a href="articlesmain.html" id="testimonials_link"> <h1 id ="atop">DISCORD: ttp#1197</h1> </a>
+<a href="https://discord.gg/Q2tTv623" id="testimonials_link"> <h1 id ="atop">DISCORD: The Home of the Party</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
 
-<a href="articlesmain.html" id="testimonials_link"> <h1 id ="atop">EMAIL: AndrewFriden@gmail.com</h1> </a>
+<a href="articlesmain.html" id="testimonials_link"> <h1 id ="atop">EMAIL: TTPSTUDIOS@gmail.com</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
 
         
-<a href="reviewsindex2.html" id="testimonials_link"> <h1 id ="atop"> FACEBOOK: Andrew Friden</h1> </a>
+<a href="https://www.facebook.com/groups/899932487136175.html" id="testimonials_link"> <h1 id ="atop"> FACEBOOK: TTP Studios</h1> </a>
     <blockquote><span class ="quote">&ldquo;</span>
 
 
