--- a/reviewsindex.html
+++ b/reviewsindex.html
@@ -918,7 +918,7 @@ for (i = 0; i < acc.length; i++) {
 }
 </script>
 
-<h2>Can't find what you are looking for? Try the links below to navigate to the main category header.</h2>
+<h3>Can't find what you are looking for? Try the links below to navigate to the main category header.</32>
   
     <p> VIDEO GAME REVIEWS </p>
     <p> Various assorted video games organized by genre or lack thereof. Covers both consoles & PC games. </p>
@@ -930,24 +930,9 @@ for (i = 0; i < acc.length; i++) {
     <p> A review of various softwares created so the user can make thier own content within the context of a certain VIDEO GAME. </p>
     <p> SELECTED CHOICE REVIEWS </p>
     <p>A special format of the review. It covers specific episodes from certain TV series among others. </p>
-   <p> SPECIAL REQUEST REVIEWS </p>
+    <p> SPECIAL REQUEST REVIEWS </p>
     <p>For reviews requested by the public </p>
 
-    
-<nav id = "side">
-    <ul>
-    <li><a href="index.html" id="home">-Home-</a></li>
-    <li><a href="about.html" id="meet_the_doctor">-About-</a></li>
-    <li><a href="contact.html" id="testimonials_link">-Newsletter-</a></li>   
-    <li><a href="WritingMain.html" id="why_a_pediatric_link">-Writing-</a></li>
-    <li><a href="software.html" id="services_link">-Software-</a></li>
-    <li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
-    <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
-    <li><a href="Forum.html" id="testimonials_link">-Forum-</a></li>
-    <li><a href="register.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
-     <li><a href="https://www.facebook.com/groups/899932487136175" target="_blank" title="Facebook">Follow us on Facebook</a></li>
-    </ul>
-</nav>
     </article>
  </section>
     
