--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">WRITERS INDEX</h1>
+        <h1 id ="atop">Contact Information</h1>
 
 <a href="https://discord.gg/Q2tTv623" id="testimonials_link"> <h1 id ="atop">DISCORD: The Home of the Party</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
