--- a/article2.html
+++ b/article2.html
@@ -50,6 +50,18 @@
         <h1 id ="atop">THE HISTORY OF STAR TREK GAMING</h1>
 <blockquote><span class ="quote">&ldquo;</span>
 
+    
+<nav id = "top">
+<ul>
+<li><a href="index.html" id="home">-Part 1-</a></li>
+<li><a href="about.html" id="meet_the_doctor">-Part 2-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Part 3-</a></li>   
+<li><a href="WritingMain.html" id="why_a_pediatric_link">-Part 4-</a></li>
+<li><a href="software.html" id="services_link">-Part 5-</a></li>
+<li><a href="contact.html" id="testimonials_link">-Conclusion-</a></li>
+</ul>
+</nav>
+    
 "There is no good Star Trek video game" -Various
 
  
@@ -57,7 +69,6 @@
 I enjoy video games. From puzzle and logic games, to the action of shooters, to the intrigue and possibilities of strategy, all of it has always appealed to me. In doing so I can't tell you how many times from many sources I read the above quote. Star Trek has had an interesting experience in the medium. Long before the generation of revival, it was revisited and expanded upon many times. Eventually it found its way to another front, that of gaming.
 
  
-
 What we're going to do in this article is take a look at all Star Trek softwares, both major and minor. Their releases and subsequent evolution. Core games of critical importance are highlighted.
 
  
