--- a/article2.html
+++ b/article2.html
@@ -53,12 +53,12 @@
     
 <nav id = "top">
 <ul>
-<li><a href="#1">Part 1: Introduction, 1971-1988</a>-Part 1-</a></li>
-<li><a href="#2">Part 2: 1991-1996</a>-Part 2-</a></li>
-<li><a href="#3">Part 3: 1997-1999</a></li>   
-<li><a href="#4">Part 4: 2000-2004</a>-Part 4-</a></li>
-<li><a href="#5">Part 5: 2006-2015</a>-Part 5-</a></li>
-<li><a href="#conclusion">Conclusion</a></p>-Conclusion-</a></li>
+<li><a href="#1">-Part 1: Introduction, 1971-1988-</a></li>
+<li><a href="#2">-Part 2-</a></li>
+<li><a href="#3">-Part 3: 1997-1999-</a></li>   
+<li><a href="#4">-Part 4-</a></li>
+<li><a href="#5">-Part 5-</a></li>
+<li><a href="#conclusion">-Conclusion-</a></li>
 </ul>
 </nav>
     
