--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">The Philosphy of Positive Energy</h1>
+        <h1 id ="atop">TTP and The Endless Party</h1>
 <blockquote><span class ="quote">&ldquo;</span>
 
 “You will give the people of Earth an Ideal to strive for. They will stumble, they will fall, but in time, they will race behind you, in time, they will join you in the Sun. In time, you will help them accomplish wonders” –JOR-EL-
