--- a/SOFWARE MARKETPLACE.HTML
+++ b/SOFWARE MARKETPLACE.HTML
@@ -30,16 +30,14 @@
     </header>
         
 <nav id = "top">
+<nav id = "top">
 <ul>
 <li><a href="index.html" id="home">-Home-</a></li>
 <li><a href="about.html" id="meet_the_doctor">-About-</a></li>
-<li><a href="contact.html" id="testimonials_link">-Newsletter-</a></li>   
 <li><a href="WritingMain.html" id="why_a_pediatric_link">-Writing-</a></li>
 <li><a href="software.html" id="services_link">-Software-</a></li>
-<li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
 <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
 <li><a href="contact.html" id="testimonials_link">-Forum-</a></li>
-<li><a href="contact.html" id="testimonials_link">-Interaction-</a></li>
 <li><a href="register.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
 </ul>
 </nav>
