--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
 </nav>
  </section>
     
+   Home
+About
+Writing
+Products
+Forum
+Contact/Hours/Location/Interaction all one page
+    
+   
      <footer id ="addressbottom">
     <p>TTP STUDIOS, LLC<br>
         701 W. Union Blvd. Suite 5<br>
