--- a/reviewsindex.html
+++ b/reviewsindex.html
@@ -919,7 +919,7 @@ for (i = 0; i < acc.length; i++) {
     
     
 <h3>Can't find what you are looking for? Try the links below to navigate to the main category header.</32>
-  <a href="reviewsindex.html" id="testimonials_link"> <h1 id ="atop">VIDEO GAME REVIEWS</h1> </a>
+  <a href="VideoGamesReviews.html" id="testimonials_link"> <h1 id ="atop">VIDEO GAME REVIEWS</h1> </a>
    <p> Various assorted video games organized by genre or lack thereof. Covers both consoles & PC games. </p>
    
   <a href="reviewsindex.html" id="testimonials_link"> <h1 id ="atop">TV SHOWS REVIEWS</h1> </a>
