Update and rename VideoGameReviews to VideoGameReviews.html

--- a/VideoGameReviews.html
+++ b/VideoGameReviews.html
@@ -45,7 +45,7 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">WRITERS INDEX</h1>
+        <h1 id ="atop">VIDEO GAMES REVIEWSX</h1>
 
 <a href="articlesmain.html" id="testimonials_link"> <h1 id ="atop">ARTICLES INDEX</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
@@ -57,6 +57,8 @@
     <blockquote><span class ="quote">&ldquo;</span>
     Fun fast paced reviews. We delve into TV SHOWS, MOVIES, VIDEO GAMES and more. Come take a look! 
 <br><i>-Last Updated: May 2020</i></blockquote>
+
+
 
 
         
