--- a/VideoGameReviews.html
+++ b/VideoGameReviews.html
@@ -45,20 +45,40 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">VIDEO GAMES REVIEWSX</h1>
-
-<a href="articlesmain.html" id="testimonials_link"> <h1 id ="atop">ARTICLES INDEX</h1> </a>
-<blockquote><span class ="quote">&ldquo;</span>
-    Articles are my attempts to write scholarly papers, or at the very least informative papers.
-<br><i>-Last Updated: May 2020</i></blockquote>
+        <h1 id ="atop">VIDEO GAMES REVIEW</h1>
 
 
-<a href="reviewsindex.html" id="testimonials_link"> <h1 id ="atop">REVIEWS INDEX</h1> </a>
-    <blockquote><span class ="quote">&ldquo;</span>
-    Fun fast paced reviews. We delve into TV SHOWS, MOVIES, VIDEO GAMES and more. Come take a look! 
-<br><i>-Last Updated: May 2020</i></blockquote>
+ <h2>-A- -B- -C- -D- -E- -F- -G- -H- -O- -K- -L- -M- -N- -O- -P- -Q- -R- -S- -T- -U- -W- -X- -Y- -Z- -0-9-</h2>
 
+ 
+ <h2> -A- </h2>
+  <h2> -B- </h2>
+   <h2> -C- </h2>
+     <h2> -D- </h2>
+     <h2> -E- </h2>
+     <h2> -F- </h2>
+     <h2> -G- </h2>
+     <h2> -H- </h2>
+     <h2> -O- </h2>
+     <h2> -K- </h2>
+     <h2> -L- </h2>
+     <h2> -M- </h2>
+     <h2> -M- </h2>
+    <h2> -N- </h2>
+     <h2>-O- </h2>
+     <h2> -P- </h2>
+     <h2> -Q- </h2>
+     <h2> -R- </h2>
+     <h2> -S- </h2>
+     <h2> -T- </h2>
+     <h2> -U- </h2>
+     <h2> -W- </h2>
+     <h2> -X- </h2>
+     <h2> -Y- </h2>
+     <h2> -Z- </h2>
+     <h2> -0-9-</h2>
 
+      
 
 
         
