--- a/VideoGameReviews.html
+++ b/VideoGameReviews.html
@@ -45,7 +45,7 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">VIDEO GAMES REVIEW</h1>
+        <h1 id ="atop">VIDEO GAMES REVIEWS</h1>
 
 
  <p> <h2>-A- -B- -C- -D- -E- -F- -G- -H- -O- -K- -L- -M- -N- -O- -P- -Q- -R- -S- -T- -U- -W- -X- -Y- -Z- -0-9-</h2> </p>
