--- a/VideoGameReviews.html
+++ b/VideoGameReviews.html
@@ -52,13 +52,14 @@
 
  
  <h2> -A- </h2>
-    <h3> ASCENDANCY </h3>
-    <h3> Overview: </h3>
-    <h3> Sounds/Music: </h3>
-    <h3>  Writing/Story:  
-    <h3> Graphics/Special Effects: </h3>
-    <h3> Favorite Part(S): </h3>
-    <h3> Total Score: </h3>
+    <h3> ASCENDANCY </h3> </li>
+    <li> <h3> Overview: </h3>  </li>
+    <li> <h3> Sounds/Music: </h3> </li>
+    <li> <h3>  Writing/Story: </h3>  </li>
+    <li> <h3> Graphics/Special Effects: </h3> </li>
+    <li> <h3> Favorite Part(S): </h3> </li>
+    <li> <h3> Total Score: </h3> </li>
+   
     <h4>This game is good. </h4>
  
  <h2> -B- </h2> 
