--- a/VideoGameReviews.html
+++ b/VideoGameReviews.html
@@ -51,17 +51,17 @@
  <p> <h2>-A- -B- -C- -D- -E- -F- -G- -H- -O- -K- -L- -M- -N- -O- -P- -Q- -R- -S- -T- -U- -W- -X- -Y- -Z- -0-9-</h2> </p>
 
  
- <h2> -A- </h2>
-    <h3> ASCENDANCY </h3> </li>
-    <li> <h3> Overview: </h3>  </li>
-    <li> <h3> Sounds/Music: </h3> </li>
-    <li> <h3>  Writing/Story: </h3>  </li>
-    <li> <h3> Graphics/Special Effects: </h3> </li>
-    <li> <h3> Favorite Part(S): </h3> </li>
-    <li> <h3> Total Score: </h3> </li>
+<h2> -A- </h2>
+    <h3> ASCENDANCY </h3> 
+    <h3> Overview: </h3>  
+    <h3> Sounds/Music: </h3> 
+    <h3> Writing/Story: </h3>  
+    <h3> Graphics/Special Effects: </h3> 
+    <h3> Favorite Part(S): </h3> 
+    <h3> Total Score: </h3> 
    
     <h4>This game is good. </h4>
- 
+
  <h2> -B- </h2> 
  <h2> -C- </h2>
  <h2> -D- </h2>
