--- a/VideoGameReviews.html
+++ b/VideoGameReviews.html
@@ -53,16 +53,35 @@
  
 <h2> -A- </h2>
     <h3> ASCENDANCY </h3> 
+    <h3> Overview: Space Exploration & Exploitation game by The Logic Factory. </h3>  
+    <h3> Sounds/Music: </h3> 
+    <h3> Writing/Story: </h3>  
+    <h3> Graphics/Special Effects: </h3> 
+    <h3> Favorite Part(S): </h3> 
+    <h3> Total Score: </h3> 
+    <h3> Release Date: 1995 </h3>
+    <h4>This game is good. </h4>
+
+ <h2> -B- </h2> 
+    <h3> ASCENDANCY </h3> 
     <h3> Overview: </h3>  
     <h3> Sounds/Music: </h3> 
     <h3> Writing/Story: </h3>  
     <h3> Graphics/Special Effects: </h3> 
     <h3> Favorite Part(S): </h3> 
     <h3> Total Score: </h3> 
-   
+    <h3> Release Date: </h3>
     <h4>This game is good. </h4>
-
- <h2> -B- </h2> 
+ 
+     <h3> ASCENDANCY </h3> 
+    <h3> Overview: </h3>  
+    <h3> Sounds/Music: </h3> 
+    <h3> Writing/Story: </h3>  
+    <h3> Graphics/Special Effects: </h3> 
+    <h3> Favorite Part(S): </h3> 
+    <h3> Total Score: </h3> 
+    <h3> Release Date: </h3>
+    <h4>This game is good. </h4>
  <h2> -C- </h2>
  <h2> -D- </h2>
  <h2> -E- </h2>
