--- a/VideoGameReviews.html
+++ b/VideoGameReviews.html
@@ -54,7 +54,7 @@
 <li><a href="#3">-C-</a></li>   
 <li><a href="#4">-D-</a></li>
 <li><a href="#5">-E-</a></li>
-<li><a href="#6">-F-</li>
+<li><a href="#6">-F-</a></li>
 <li><a href="#7">-G-</a></li>
 <li><a href="#8">-H-</a></li>
 <li><a href="#9">-I-</a></li>   
