--- a/VideoGameReviews.html
+++ b/VideoGameReviews.html
@@ -80,16 +80,14 @@
 </nav>
 
 <h2><a name="1"></a>-A-</h2>
-ASCENDANCY
-Sounds/Music: 1/5 (The background song is nice, but it is the only thing you’ll ever hear)
-Writing/Story: 4/5
-Graphics/Special Effects: 5/5
-Favorite Part(S): 
-Total Score: 4/5
-Review:
+<h3>ASCENDANCY</h3>
+<h4>Sounds/Music: 1/5 (The background song is nice, but it is the only thing you’ll ever hear)</h4>
+<h4>Writing/Story: 4/5 </h4>
+<h4>Graphics/Special Effects: 5/5</h4>
+<h4>Favorite Part(S): </h4>
+<h4>Total Score: 4/5</h4>
 
-
-Many people dislike this one. They feel the AI is incompetent. There was a later patch to address this, but I haven't really noticed any difference before and after. 
+<h4> Many people dislike this one. They feel the AI is incompetent. There was a later patch to address this, but I haven't really noticed any difference before and after. 
 
 This game is full of many interesting ideas. The tech tree is also interesting, although a quibble I have is, it is not organized in any sort of logical manner. So if you want new weapons, you have to wait until you see its corresponding group light up, theirs no way to do a logical progression of tech items you may want to upgrade.
 
@@ -105,7 +103,7 @@ This game does have a unique interface that does its job very well. It is a litt
 
 All in all though this game is very colorful, and the special use devices are definitely fun. There is a lot of strategic potetional, if you can look aside some of the more quirky elements.
 
-If you enjoy games such as SimCity, or Master of Orion, this will be enjoyable.
+If you enjoy games such as SimCity, or Master of Orion, this will be enjoyable. /h4>
         
 <h2><a name="2"></a>-B-</h2>
 Name: Baldur’s Gate/Baldur’s Gate Tales of the Sword Coast
