--- a/reviewsindex.html
+++ b/reviewsindex.html
@@ -941,14 +941,14 @@ for (i = 0; i < acc.length; i++) {
  </section>
     
      <footer id ="addressbottom">
-    <p>Jeannine E Wyke, DMD, PC<br>
+    <p> TTP Studios<br>
         701 W. Union Blvd. Suite 5<br>
-        Bethlehem, PA 18018<br>
+        Gotham, NJ 18018<br>
         610&#8209;867&#8209;1511</p>
     </footer>
 
 <footer id = "copyright">
-    <p>Copyright &copy;2020  TTP STUDIOS</p>
+    <p>Copyright &copy;2022  TTP STUDIOS</p>
     </footer>
    
 </body>
