--- a/market.html
+++ b/market.html
@@ -45,7 +45,7 @@
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">WRITERS INDEX</h1>
+        <h1 id ="atop">SOFTWARE INDEX</h1>
 
 <a href="articlesmain.html" id="testimonials_link"> <h1 id ="atop">MOONDOG</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
@@ -97,7 +97,7 @@
      <footer id ="addressbottom">
     <p>TTP STUDIOS, LLC<br>
         701 W. Union Blvd. Suite 5<br>
-        Hackettstown, NJ 07840<br>
+        Gotham, NJ 0428555<br>
         610&#8209;867&#8209;1511</p>
     </footer>
 
