--- a/MoonDogMain.html
+++ b/MoonDogMain.html
@@ -47,7 +47,7 @@
     <article id="test">
         <h1 id ="atop">SOFTWARE INDEX</h1>
 
-<a href="MoonDogMain.html" id="MoonDogMain_link"> <h1 id ="atop">MOONDOG</h1> </a>
+ <h1 id ="atop">MOONDOG</h1> 
 <blockquote><span class ="quote">&ldquo;</span>
     Moondog is a short action packed game for any device. 
     15 levels
