--- a/MoonDogMain.html
+++ b/MoonDogMain.html
@@ -47,7 +47,7 @@
     <article id="test">
         <h1 id ="atop">SOFTWARE INDEX</h1>
 
- <h1 id ="atop">MOONDOG</h1> 
+ <h1>MOONDOG</h1> 
 <blockquote><span class ="quote">&ldquo;</span>
     Moondog is a short action packed game for any device. 
     15 levels
