--- a/market.html
+++ b/market.html
@@ -80,7 +80,7 @@
     Price: $5.00
 <br><i>-Last Updated: May 2020</i></blockquote>
         
-   <a href="Primemain.html" id="PrimeMain_link"> <h1 id ="atop">Prime</h1> </a>
+   <a href="Primemain.html" id="Primemain_link"> <h1 id ="atop">Prime</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
 An adventure/action game set in a big world.
 <br><i>-Last Updated: May 2020</i></blockquote>
