--- a/testimonials.html
+++ b/testimonials.html
@@ -22,13 +22,13 @@
 
 <body>
     
-    <header id ="addresstop">
-        <p>TTP STUDIOS, LLC, PC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Bethlehem,&nbsp;PA 18018&nbsp;&nbsp; | &nbsp;&nbsp;610&#8209;867&#8209;1511</p>
+     <header id ="addresstop">
+        <p>TTP STUDIOS, LLC&nbsp;&nbsp; | &nbsp;&nbsp;701 W. Union Blvd. Suite 5&nbsp;&nbsp; | &nbsp;&nbsp;Gotham,&nbsp;NJ 078650&nbsp;&nbsp; | &nbsp;&nbsp;CALL&#8209;TODAY&#8209;!!!!!</p>
     </header>
     <header id ="banner">
-        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="Dr. Jeannine Wyke Dentist Header Image">
-    </header>
-        
+        <img id ="bannerpic" src="img/header.jpg" width=960 height=240 alt="TTP STUDIOS LOGO">
+    </header>   
+
 <nav id = "top">
 <ul>
 <li><a href="index.html" id="home">-Home-</a></li>
