--- a/GuidedSolarTourMain.html
+++ b/GuidedSolarTourMain.html
@@ -58,7 +58,7 @@
     Price: $1.00
 <br><i>-Last Updated: May 2020</i></blockquote>
 
-<img src="image_url.jpg" alt="MoondogPhoto1">
+<img src="SolarModelPhotoI.png" alt="MoondogPhoto1">
 <img src="image_url.jpg" alt="MoondogPhoto2">
 <img src="image_url.jpg" alt="MoondogPhoto3">
 
