--- a/GuidedSolarTourMain.html
+++ b/GuidedSolarTourMain.html
@@ -40,12 +40,14 @@
 </ul>
 </nav>
 
-
+<a href="MoonDogMain.html" id="MoonDogMain_link"> <h1 id ="atop">MOONDOG</h1> </a>
+<blockquote><span class ="quote">&ldquo;</span>
 
 <section id ="container">
 
     <article id="test">
-        <h1 id ="atop">SOFTWARE INDEX</h1>
+<a href="market.html" id="Market_link"> <h1 id ="atop">MARKETPLACE INDEX</h1> </a>
+    <blockquote><span class ="quote">&ldquo;</span>
 
  <h1>MOONDOG</h1> 
 <blockquote><span class ="quote">&ldquo;</span>
