--- a/GuidedSolarTourMain.html
+++ b/GuidedSolarTourMain.html
@@ -53,7 +53,7 @@
 <blockquote><span class ="quote">&ldquo;</span>
     Moondog is a short action packed game for any device. 
     15 levels
-    7 weapons
+    7 weapon
     15 Boss fights
     1 Secret level
     1 Seceret Weapon
