--- a/GuidedSolarTourMain.html
+++ b/GuidedSolarTourMain.html
@@ -40,8 +40,8 @@
 </ul>
 </nav>
 
-<a href="MoonDogMain.html" id="MoonDogMain_link"> <h1 id ="atop">MOONDOG</h1> </a>
-<blockquote><span class ="quote">&ldquo;</span>
+ <article id="test">
+ <h1 id ="atop">SOFTWARE INDEX</h1>
 
 <section id ="container">
 
