--- a/software.html
+++ b/software.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-<meta name="keywords" content="kids dentist lehigh valley Pennsylvania" />
-<meta name="description" content="The pediatric dental office of Jeannine Wyke DMD strives to make every dental visit fun while creating healthy smiles & great dental habits. We're the foundation of your child's dental health. We think they deserve the best. Call today to schedule an appointment. (610) 867-1511" />
+<meta name="keywords" content="Software, Music, Writing Production Studio" />
+<meta name="description" content="Creating enriching and viable products of entertainment, to enhance the world around us. (610) 867-1511" />
 <title>Pediatric Dentists in Bethlehem, PA</title>
 
 <!--Use this meta tag so iPhones scale the page appropriately --------------------->
