--- a/article1.html
+++ b/article1.html
@@ -101,7 +101,7 @@
       Using the level exit code on floor 9 of any episode will start you on the first floor of the following episode. The floor indicator in the HUD will also be identified sequentially. Thus episode 2 floor 1 would read as floor 11. This is fixed in the GOG version. (Wolfenstein 3-D Only)
       If while making a map, you plant the titular Spear somewhere where the player can grab it, if they do so, they will be transported to the Angel of Death floor. (Spear of Destiny Only)
 
-<h2>Blake Stone: Aliens of Gold & Planet Strike
+<h2>Blake Stone: Aliens of Gold & Planet Strike</h2>
       When 11% or lower in health you may drink decorative water sprites. A hold over from Wolf-3D.
       You can replicate the “God Demo” glitch from Wolf-3D here as well. Unfortunately, like Spear of Destiny before, BS demos end sooner rather than later to display the score screen.
       If you damage a Sector Patrol, they will run across health items to heal themselves. They also, surprisingly enough are the only enemy who seems run out of ammunition. If this happens, they will run through the level looking for ammo/weapon to reload their gun. If they are damaged during this point and NOT killed, they will be given one bullet by an unknown means to fire back at you.
