--- a/minahw.html
+++ b/minahw.html
@@ -23,7 +23,7 @@
 </style>
 </head>
 <body>
-<h1> Sherice Glover - Class 4 </h1>
+<h1> Lady Itachi  - Class 4 </h1>
 <table>
 <tr>
  <th colspan ="8"> Book Inventory Sheet </th>
