--- a/minahw.html
+++ b/minahw.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title> Name - Class 4 </title>
+<title> Book Inventory Sheet </title>
 <style>
     table,th,td{
         border: 3px solid #dddddd;
