--- a/QrazyClonesMain.html
+++ b/QrazyClonesMain.html
@@ -81,6 +81,14 @@
 
 </article>
 
+Get It Here!
+<a href="https://github.com/TheTrueParty/PROTOTYPE/releases/download/Puzzles/QrazyClones.exe">ClonePack</a> 
+
+
+
+
+
+    
 <nav id = "side">
     <ul>
     <li><a href="index.html" id="home">-Home-</a></li>
