--- a/QrazyClonesMain.html
+++ b/QrazyClonesMain.html
@@ -47,16 +47,14 @@
     <article id="test">
         <h1 id ="atop">SOFTWARE INDEX</h1>
 
- <h1>MOONDOG</h1> 
+ <h1>CrazyClones</h1> 
 <blockquote><span class ="quote">&ldquo;</span>
-    Moondog is a short action packed game for any device. 
-    15 levels
-    7 weapons
-    15 Boss fights
-    1 Secret level
-    1 Seceret Weapon
-    Price: $1.00
-<br><i>-Last Updated: May 2020</i></blockquote>
+As the name suggests this is cloned versions made by me of several classic games that have been remade since the history of gaming.
+    Pong
+    Breakout
+    Snake
+    Flappy Birds
+<br><i>-Last Updated: March 2025</i></blockquote>
 
 <img src="image_url.jpg" alt="MoondogPhoto1">
 <img src="image_url.jpg" alt="MoondogPhoto2">
