--- a/GuidedSolarTourMain.html
+++ b/GuidedSolarTourMain.html
@@ -57,7 +57,7 @@ Solar Tours is a short guided tour of our own solar system. Zoom in and Zoom out
 <img src="SolarModelPhotoI.png" alt="MoondogPhoto1">
 
 Get it here!!!!
-<a href="https://github.com/TheTrueParty/PROTOTYPE/releases/download/1.0/SolarToura.exe">SolarTour</a> 
+<a href="https://github.com/TheTrueParty/PROTOTYPE/releases/download/SolarTour/SolarTour.zip">SolarTour</a> 
         
         
 <!--Payment Buttons and Functions Start Here-->     
