--- a/about.html
+++ b/about.html
@@ -47,14 +47,11 @@
         <h1 id ="atop">TTP and The Endless Party</h1>
 <blockquote><span class ="quote">&ldquo;</span>
 
-I began talking though not sure to who. Eventually it revealed itself to be the DreamWeaver. Whether he was the product of a 8 year old's wild imagination, or something very special happened, who am I to say. The DreamWeaver seemed to be the personification of the universe that I was talking to as I walked in from the bus home each day. He seemed to listen to me with great interest each day, as I began our discussions. I began asking them for things. I kept saying "please let tomorrow be better" "please dont let this happen again". "Please not let another person ever go through the "Andrew Friden" experience, this is horrible, this is awful, this is terrible." "this cant happen again, this must not happen again" "please fix this" "please help me fix this....". Everyday, for months. Then finally it seemed to have heard me, and suggested "Be careful what you wish for..." and so then began, the negotiation. I asked for the power and the strength to change things, to be better and make the lives of those I cared about most also better.
+    "Today is a time to celebrate, because tommorow we all may die." -Tony Todd-
 
-In my penumbra,, I heard my first answer. It was not soon after that all of my therapies started to pay off and I could not get enough. 
-I developed great strength and speed in my legs. Not as much as the arms, but I am trying. I ALMOST did one pull up the other day.
+A long time ago I stumbled upon the idea of celebrating each and every day to it's fullest potetional. Following ideas stressed by those around me, of having fun everyday, in every possible way. 
     
-    
-Enclosed you will find the hard work of scientists, artists and many people from all walks of life, joining together to create very special projects. 
-Projects that serve to enrich our world and our universe.
+Enclosed you will find the hard work of , joining together to create very special projects. 
 
 This site and the enclosed work on it reflect my dreams, my hopes, my hard work.
 
