--- a/software.html
+++ b/software.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
 <meta name="keywords" content="Software, Music, Writing Production Studio" />
 <meta name="description" content="Creating enriching and viable products of entertainment, to enhance the world around us. (610) 867-1511" />
-<title>Pediatric Dentists in Bethlehem, PA</title>
+<title>TTP STUDIOS</title>
 
 <!--Use this meta tag so iPhones scale the page appropriately --------------------->
     <meta name="viewport" content="width=device-width, initial-scale=1">
